--- a/index.html
+++ b/index.html
@@ -517,6 +517,6 @@ rgb(255, 255, 255, 0.7),rgba(255, 255, 255, 0.7)),url(img/people.svg) no-repeat 
 		  "<br>Longitude: " + position.coords.longitude;
 		  */
 		  
-		  x.href = "https://wa.me/4917622295701?text=Hallo%20Team%20Shisha2u.%201x%20Classic-Shisha%20Social-Smoke%20LemonFresh%20an%20folgende%20Adresse%20liefern:%20" + "https://www.google.com/maps/search/?api=1&query=" + position.coords.latitude + "," +  position.coords.longitude;
+		  x.href = "https://wa.me/4917622295701?text=Hallo%20Team%20Shisha2u.%201x%20Classic-Shisha%20Social-Smoke%20LemonFresh%20an%20folgende%20Adresse%20liefern:%20" + "https://maps.google.com/?q=" + position.coords.latitude + "," +  position.coords.longitude;
 		}
 </script>
