--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="js/jquery-2.1.1.js"></script>
 
   	
-	<title>Shisha2u</title>
+	<title>Shisha2you</title>
 </head>
 			<div id="cookieConsent">
 			    <div id="closeCookieConsent"><i class="material-icons">close</i></div>
