--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 				<li><a class="btn_nav" href="#anfahrt"><h3>Anfahrt</h3></a></li>
 			</ul>
 		</nav>
-		<a class="btn_telefon slideanim2" href="tel:+51112345667" ><i class="material-icons">phone</i></a>
-		<a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a>
+		<!-- <a class="btn_telefon slideanim2" href="tel:+51112345667" ><i class="material-icons">phone</i></a> -->
+		<!-- <a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a> -->
 
 		<img class="slideanim3" src="img/logo.png" style="position: absolute;display: block;margin-left: auto;margin-right: auto;width: 100%;max-width: 800px;height: auto;z-index: 2;top: 20%;right: 0px;left: 0px;"/>
 		<!--
@@ -73,7 +73,7 @@
 <section id="section10" class="demo">
 		<a href="#auswahl"><span></span></a>
 </section>
-<div id="auswahl" class="container-fluid slideanim" style="background: linear-gradient(
+<div id="auswahl" class="container-fluid " style="background: linear-gradient(
 	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 	<h4 class="">Unsere Auswahl</h4>
 	<div class="middle">
@@ -189,7 +189,7 @@
 <hr class="style-two">
 <!-- /////// MENU  /////////// -->
 
-<div id="menu" class="container-fluid slideanim" style="background: linear-gradient(
+<div id="menu" class="container-fluid " style="background: linear-gradient(
 	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/shisha.svg) no-repeat center center;">
 	<br>
 	<br>
@@ -215,7 +215,7 @@
 <!-- /////// SOCIAL MEDIA  ///////////-->
 <hr class="style-two">
 
-<div id="social-media" class="container-fluid slideanim" style="background: linear-gradient(
+<div id="social-media" class="container-fluid " style="background: linear-gradient(
 rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat center center;">
 <br>
 <br>
@@ -227,16 +227,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 	        <i class="fab fa-facebook-f"></i>
 	      </a>
 	      <a class="btn_s" href="#">
-	        <i class="fab fa-twitter"></i>
-	      </a>
-	      <a class="btn_s" href="#">
-	        <i class="fab fa-google"></i>
-	      </a>
-	      <a class="btn_s" href="#">
 	        <i class="fab fa-instagram"></i>
-	      </a>
-	      <a class="btn_s" href="#">
-	        <i class="fab fa-youtube"></i>
 	      </a>
   	</div>
   </div>
@@ -250,24 +241,24 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 
 <!-- ///////// Lieferzeiten  /////// -->
 <hr class="style-two">
-<div id="lieferzeiten" class="container-fluid slideanim" style="background: linear-gradient(
+<div id="lieferzeiten" class="container-fluid" style="background: linear-gradient(
 	rgb(255, 255, 255, 0.7),rgba(255, 255, 255, 0.7)),url(img/moto.svg) no-repeat center center;">
 		<br>
 		<br>
   <h4>LIEFERZEITEN</h4>
 		<div style="text-align: center;">
-				<h5>Unsere Lieferzeiten</h5>
+				<h5 style="text-transform: uppercase;"><b>Unsere Lieferzeiten</b></h5>
 				<hr class="style-two">
-				<p><h3> Montags-Freitags</h3></p>
-				<p><h3>17:00 - 01:00</h3></p>
+				<p><h3><b>Montags-Freitags</b></h3></p>
+				<p><h3><b>17:00 - 01:00</b></h3></p>
 				<br>
 				<hr class="style-two">
-				<p><h3> Samstags</h3></p>
-				<p><h3>17:00 - 02:00</h3></p>
+				<p><h3><b>Samstags</b></h3></p>
+				<p><h3><b>17:00 - 02:00</b></h3></p>
 				<br> 
 				<hr class="style-two">
-				<p><h3> Sonntags</h3></p>
-				<p><h3>17:00 - 23:00</h3></p>
+				<p><h3><b>Sonntags</b></h3></p>
+				<p><h3><b>17:00 - 23:00</b></h3></p>
 				<br>
 	</div>
 	<br>
@@ -279,7 +270,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 </section>
 
 <hr class="style-two">
-<div id="kontakt" class="container-fluid slideanim" style="background: linear-gradient(
+<div id="kontakt" class="container-fluid " style="background: linear-gradient(
 	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/phone.svg) no-repeat center center;">
 <h4 class="">KONTAKT</h4>
   <h5>Kontaktieren Sie uns per Telefon oder E-Mail.</h5>
@@ -287,7 +278,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 	<div class="col-sm-3"></div>
 	<div class="col-sm-3"><p><a class="btn_s" href="tel:+49 511 12345678"><i class="material-icons">phone</i></a><h3> +49 511 12345678</h3></p></div>
 	<div class="col-sm-3">
-		<p><a class="btn_s" href="mailto:kontakt@shisha2u.de?subject=Kontaktanfrage"><i class="material-icons">email</i> </a><h3>kontakt@shisha2u.de</h3></p>
+		<p><a class="btn_s" href="mailto:kontakt@shisha2u.de?subject=Kontaktanfrage"><i class="material-icons">email</i> </a><h3>kontakt@shisha2you.de</h3></p>
 	</div>
 		<div class="col-sm-3"></div>
 	</div>
@@ -300,7 +291,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 
 <!-- ///////// ANFAHRT /////// -->
 <hr class="style-two">
-<div id="anfahrt" class="container-fluid slideanim" style="background: linear-gradient(
+<div id="anfahrt" class="container-fluid " style="background: linear-gradient(
 	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/moto2.svg) no-repeat center center;">
 	<h4 class="">Anfahrt</h4>
 	<div class="row">
