--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 		<br>
 		<h5>Schau dir unser komplettes Angebot an:</h3>
 		<a class="btn_menu" style="text-decoration-line: none; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);" 
-				href="img/shisha2you.pdf" download><h3>Shishakarte</h3>
+				href="img/Shisha2you.pdf" download><h3>Shishakarte</h3>
 	      </a>
 		  <a class="btn_menu" style="text-decoration-line: none; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);" 
-		  		href="img/shisha2you.pdf" download><h3>Getränkekarte</h3>
+		  		href="img/Shisha2you.pdf" download><h3>Getränkekarte</h3>
 	      </a>
 	  </div>
 	</div>
