--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
   <div class="card" style="width: 100%; border-radius: 2rem; background: rgba(255, 255, 255, 0); box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">
 	<div class="card-body">
 		<div style="text-align: center;">
-			<p><h5><b>Montags - Donnerstag</b></h5></p>
+			<p><h5><b>Montags - Donnerstag & Sonntags</b></h5></p>
 			<p><h5><b>Vermietung ab 15:00 Uhr -  Abholung bis spätestens 23:00 Uhr</b></h5></p>
 			<br>
 			<hr class="style-two">
